--- a/www/index.html
+++ b/www/index.html
@@ -21,13 +21,13 @@
     <head>
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:; child-src * gap://ready
             ;">
-            <meta name="format-detection" content="telephone=no">
-                <meta name="msapplication-tap-highlight" content="no">
-                    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-                        <link rel="stylesheet" type="text/css" href="css/index.css">
-                            <link rel="stylesheet" type="text/css" href="css/knacss.css">
-                                <title>Hello World</title>
-                                </head>
+        <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/knacss.css">
+        <title>Cordova AppDemo</title>
+    </head>
     <body>
         <div class="app">
             <h1>Apache Cordova</h1>
@@ -36,13 +36,17 @@
                 <p class="event received">Device is Ready</p>
             </div>
             <div class="mts">
+                <p class="button" id="location-permission">Location permission</p>
+            </div>
+            <div class="mts">
                 <p class="button" id="optin">Optins</p>
                 <p id="optin-result"></p>
             </div>
-            <div id="detection">
-                <p class="button">Detection</p>
+            <div>
+                <p id="register-inapp" class="button">Register InApp</p>
+                <p id="unregister-inapp" class="mts button">Unregister InApp</p>
             </div>
-            <div id="inappaction"></div>
+            <div id="result-inapp" class="mts"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
