Update for SDK 5.0: push, groupName & customId

--- a/www/index.html
+++ b/www/index.html
@@ -42,11 +42,23 @@
                 <p class="button" id="optin">Optins</p>
                 <p id="optin-result"></p>
             </div>
-            <div>
+            <div class="mts">
+                <input type="text" id="custom-id" placeholder="contact@connecthings.com" />
+                <p class="mts button" id="set-custom-id">Set customId</p>
+                <p class="mts button" id="remove-custom-id">Remove customId</p>
+            </div>
+            <div class="mts">
+                <p class="button" id="register-push">Register Push</p>
+            </div>
+            <div class="mts">
+                <input type="text" id="app-group-name" placeholder="group.your.app.groupame" />
+                <p class="mts button" id="set-app-group-name">Set app group name</p>
+            </div>
+            <div class="mts">
                 <p id="register-inapp" class="button">Register InApp</p>
                 <p id="unregister-inapp" class="mts button">Unregister InApp</p>
             </div>
-            <div id="result-inapp" class="mts"></div>
+            <div id="result-inapp" class="mts pbs"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
