adjust project after adding function for manual notification permission request

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,9 @@
                 <p class="button" id="register-push">Register Push</p>
             </div>
             <div class="mts">
+                <p class="button" id="register-geofence">Register Geofence Notifications</p>
+            </div>
+            <div class="mts">
                 <input type="text" id="app-group-name" placeholder="group.your.app.groupame" />
                 <p class="mts button" id="set-app-group-name">Set app group name</p>
             </div>
